[project]
name = "youtube-transcript-mcp"
version = "0.1.0"
description = "MCP server for fetching YouTube transcripts"
dependencies = [
    "mcp",
    "youtube_transcript_api",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
youtube-transcript-mcp = "youtube_transcript_mcp:main"
